force-app/main/default/objects/Results__c/fields/ApiRaceId__c.field-meta.xml
<CustomField>
    <fullName>ApiRaceId__c</fullName>
    <label>ApiRaceId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>