force-app/main/default/objects/Results__c/fields/Grid__c.field-meta.xml
<CustomField>
    <fullName>Grid__c</fullName>
    <label>Grid</label>
    <length>50</length>
    <type>Text</type>
</CustomField>