force-app/main/default/objects/Results__c/fields/Pits__c.field-meta.xml
<CustomField>
    <fullName>Pits__c</fullName>
    <label>Pits</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>