force-app/main/default/objects/Results__c/fields/Starting_Grid__c.field-meta.xml
<CustomField>
    <fullName>Starting_Grid__c</fullName>
    <label>Starting Grid</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>